Pulled changed from master across. Ignore any tests that need rewriting not to use jersey. Processes start and tests are launched (acceptance tests) but lots of failures..